--- a/box/package.json
+++ b/box/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "smpp": "^0.6.0-rc.4"
   }
 }
